       have an autopilot fitted (#988)
     * Close comms menu on hyperspace (#996, #984)
     * Fix game crash if game is loaded over a loaded game (#1014, #1015)
     * Fix bulletin boards being re-created after game load (#1017)
     * Don't allocate and deallocate hyperspace starfield every frame (#1020)
     * Stop attacking ships continuing to fire on dead player (#1033, #57)

   * Script changes
     * New FlightLog class that tracks systems and starports visited by the
       (#1021)
     * New method Ship.SetFuelPercent and attribute Ship.fuel to set and get
       ship fuel amount. New event onShipFuelChanged to report fuel status (#980)
     * Net method Ship.Explode to destroy the ship immediately (#974)
	 

   * Internal changes
     * New graphics/rendering infrastructure (#960, #913, #1001, #1002, #1013,
       #1024, #1007)
     * Silence MSVC warnings (#964)
     * Remove dependencies on Pi from Texture (#969) and Font (#981)
     * Move EquipSet into its own header (#991)
     * Give float comparison functions consistent naming (#991)
     * Use the correct size_t format specifier for the compiler (#991)


Alpha 19

   * New features
     * Sidereal camera, an external camera that holds its position relative to
       the stars. Great for screenshots! (#932)
     * Moon height map. Now looks like the real thing! (#936)
     * Lua-based body name generator. Planets and starports now have much more
       interesting/varied names (#896, #926)
     * Joystick deadzone support (#870)

   * Minor changes and tweaks
     * Roll keys now work while using mouse control (#904, #850, #278, #914, #919)
     * Camera quick-switch using Shift+1-4 in the main view (#932)
     * Sector view now shows line from current to target system (#843, #845)
     * Optimised nearby system lookups for scripts. Significantly improves
       game startup time (#937)
     * Various TradeShips optimisiations and fixes (#917)

   * Fixes